# pubmed-research-finder

./: README.md  cli.py  db.sqlite3  manage.py  pyproject.toml  results.csv
papers/: urls.py  utils.py  views.py
papers/templates/papers/: home.html  results.html
pubmed_project/: asgi.py  settings.py  urls.py  wsgi.py
